# TCE_Naco

./: .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: rag_corpus.json
data/raw/: sample_sessions.json
edge/: JETSON_BENCHMARK.md  reviewer_fill.md  summary_table.csv
edge/run_base/: results.json  tegrastats_summary.json
edge/run_ctx_1024/: results.json  tegrastats_summary.json
edge/run_ctx_2048/: results.json  tegrastats_summary.json
edge/run_ctx_4096/: results.json  tegrastats_summary.json
edge/run_ctx_8192/: results.json  tegrastats_summary.json
naco/: __init__.py  agents.py  config.py  cora_mcts.py  data.py  naco_ds.py  progressive_simpo.py  rag.py  rewards.py  types.py
paper/: bare_jrnl_new_sample4.tex  ref.bib
refine-logs/: EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS.md
reproducibility/search_efficiency/: search_efficiency_notes.txt  search_efficiency_summary.csv
scripts/: build_preferences.py  cora_mcts_efficiency_simulation.py  evaluate_metrics.py  generate_plots.py  jetson_http_benchmark.py  plot_search_efficiency_science.py  redraw_scienceplots.py  sanity_check.py  synthesize_corpus.py  train_prog_simpo.py
tests/: test_cora_mcts.py  test_naco_ds.py  test_progressive_simpo.py
