[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tce-naco"
version = "0.2.0"
description = "NaCo reconstruction for IEEE TCE paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
  "peft>=0.10",
  "matplotlib>=3.7",
  "scienceplots>=2.1",
  "requests>=2.31",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["naco*"]
